# rdf.rs

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGES.md  CITATION.cff  CREDITS.md  Cargo.toml  README.md  Rakefile
.cargo/: config.toml
lib/rdf-borsh/: Cargo.toml
lib/rdf-borsh/src/: borsh_dataset.rs  borsh_header.rs  borsh_quad.rs  borsh_reader.rs  borsh_statement.rs  borsh_term.rs  borsh_term_id.rs  borsh_triple.rs  borsh_writer.rs  lib.rs  parse.rs  reader.rs  writer.rs
lib/rdf-derive/: Cargo.toml
lib/rdf-derive/src/: lib.rs
lib/rdf-format/: Cargo.toml
lib/rdf-format/src/: format.rs  lib.rs
lib/rdf-hash/: Cargo.toml
lib/rdf-hash/examples/: hash_terms.rs
lib/rdf-hash/src/: lib.rs  term_hash.rs  triple_hash.rs
lib/rdf-model/: Cargo.toml
lib/rdf-model/src/: any_statement.rs  any_term.rs  base_direction.rs  dataset.rs  datatype.rs  document.rs  graph.rs  lib.rs  literal.rs  node.rs  prelude.rs  quad.rs  quad_pattern.rs  source.rs  statement.rs  statement_pattern.rs  statement_slot.rs  term.rs  term_hash.rs  term_kind.rs  triple.rs  triple_pattern.rs  vocabulary.rs
lib/rdf-model/src/alloc/: heap_quad.rs  heap_term.rs  heap_triple.rs  mod.rs
lib/rdf-model/src/cow/: const.rs  mod.rs  sample.rs  term.rs
lib/rdf-model/src/heap/: heap_quad.rs  heap_quad_pattern.rs  heap_term.rs  heap_triple.rs  heap_triple_pattern.rs  mod.rs  term.rs
lib/rdf-model/src/interop/: oxrdf.rs  sophia.rs
lib/rdf-model/src/providers/: oxrdf.rs  sophia.rs
lib/rdf-model/src/traits/: countable.rs  durable.rs  enumerable.rs  indexable.rs  maybe_durable.rs  maybe_indexed.rs  maybe_mutable.rs  mutable.rs  queryable.rs
lib/rdf-reader/: Cargo.toml
lib/rdf-reader-cottas/: Cargo.toml  README.md
lib/rdf-reader-cottas/examples/: read_cottas.rs  read_cottas_iter.rs  read_cottas_stream.rs
lib/rdf-reader-cottas/src/: error.rs  lib.rs  reader.rs  term.rs
lib/rdf-reader-hdt/: Cargo.toml  README.md
lib/rdf-reader-hdt/examples/: read_hdt.rs  read_hdt_iter.rs  read_hdt_stream.rs
lib/rdf-reader-hdt/src/: error.rs  lib.rs  reader.rs  triple.rs
lib/rdf-reader-jelly/: Cargo.toml  README.md
lib/rdf-reader-jelly/src/: lib.rs
lib/rdf-reader-jsonld/: Cargo.toml  README.md
lib/rdf-reader-jsonld/examples/: read_jsonld.rs  read_jsonld_iter.rs  read_jsonld_stream.rs
lib/rdf-reader-jsonld/src/: error.rs  lib.rs  reader.rs  triple.rs
lib/rdf-reader-jsonld/src/oxrdf/: error.rs  reader.rs
lib/rdf-reader-rdfxml/: Cargo.toml  README.md
lib/rdf-reader-rdfxml/examples/: read_rdfxml.rs  read_rdfxml_iter.rs  read_rdfxml_stream.rs
lib/rdf-reader-rdfxml/src/: error.rs  lib.rs  reader.rs  triple.rs
lib/rdf-reader-rdfxml/src/oxrdf/: error.rs  reader.rs
lib/rdf-reader-trig/: Cargo.toml  README.md
lib/rdf-reader-trig/examples/: read_trig.rs  read_trig_iter.rs  read_trig_stream.rs
lib/rdf-reader-trig/src/: error.rs  lib.rs  reader.rs  triple.rs
lib/rdf-reader-trig/src/oxrdf/: error.rs  quad.rs  reader.rs
lib/rdf-reader-turtle/: Cargo.toml  README.md
lib/rdf-reader-turtle/examples/: read_turtle.rs  read_turtle_iter.rs  read_turtle_stream.rs
lib/rdf-reader-turtle/src/: error.rs  lib.rs  reader.rs  triple.rs
lib/rdf-reader-turtle/src/oxrdf/: reader.rs
lib/rdf-reader/src/: lib.rs  open_options.rs  open_path.rs  open_url.rs  reader.rs  reader_options.rs  stream_iter.rs
lib/rdf-reader/src/interop/: oxrdf.rs
lib/rdf-reader/src/providers/: oxrdf.rs
lib/rdf-store/: Cargo.toml  README.md
lib/rdf-store-idb/: Cargo.toml  README.md
lib/rdf-store-idb/src/: error.rs  lib.rs  store.rs  transaction.rs
lib/rdf-store-idb/tests/: store_test.rs
lib/rdf-store-mongo/: Cargo.toml  README.md
lib/rdf-store-mongo/examples/: store_mongo.rs
lib/rdf-store-mongo/src/: error.rs  lib.rs  store.rs  transaction.rs  triple.rs  triple_id.rs
lib/rdf-store-neo4j/: Cargo.toml  README.md
lib/rdf-store-neo4j/examples/: store_neo4j.rs
lib/rdf-store-neo4j/src/: error.rs  lib.rs  store.rs  transaction.rs
lib/rdf-store-oxigraph/: Cargo.toml  README.md
lib/rdf-store-oxigraph/src/: error.rs  lib.rs  store.rs  transaction.rs
lib/rdf-store-postgres/: Cargo.toml  README.md
lib/rdf-store-postgres/examples/: store_postgres.rs
lib/rdf-store-postgres/src/: error.rs  lib.rs  schema.rs  store.rs  transaction.rs
lib/rdf-store-qlever/: Cargo.toml  README.md
lib/rdf-store-qlever/examples/: store_qlever.rs
lib/rdf-store-qlever/src/: error.rs  lib.rs  store.rs  transaction.rs
lib/rdf-store-sqlite/: Cargo.toml  README.md
lib/rdf-store-sqlite/etc/: schema.sql
lib/rdf-store-sqlite/examples/: store_sqlite.rs
lib/rdf-store-sqlite/src/: error.rs  lib.rs  schema.rs  store.rs  transaction.rs
lib/rdf-store-turso/: Cargo.toml  README.md
lib/rdf-store-turso/src/: error.rs  lib.rs  store.rs  transaction.rs
lib/rdf-store-valkey/: Cargo.toml  README.md
lib/rdf-store-valkey/examples/: store_valkey.rs
lib/rdf-store-valkey/src/: document.rs  document_set.rs  error.rs  graph_key.rs  lib.rs  path.rs  quad.rs  store.rs  term.rs  transaction.rs  triple.rs  triple_id.rs  triple_key.rs  triple_pattern.rs
lib/rdf-store-virtuoso/: Cargo.toml  README.md
lib/rdf-store-virtuoso/examples/: store_virtuoso.rs
lib/rdf-store-virtuoso/src/: error.rs  lib.rs  store.rs  transaction.rs
lib/rdf-store/examples/: heap_store.rs  store_heap.rs
lib/rdf-store/src/: lib.rs  read_transaction.rs  store.rs  store_options.rs  transaction.rs  write_transaction.rs
lib/rdf-vocab/: Cargo.toml
lib/rdf-vocab/src/: lib.rs  rdf.rs  rdfs.rs
lib/rdf-writer-cottas/: Cargo.toml  README.md
lib/rdf-writer-cottas/examples/: write_cottas.rs
lib/rdf-writer-cottas/src/: error.rs  lib.rs  writer.rs
lib/rdf-writer-hdt/: Cargo.toml  README.md
lib/rdf-writer-hdt/examples/: write_hdt.rs
lib/rdf-writer-hdt/src/: error.rs  lib.rs  writer.rs
lib/rdf-writer-jelly/: Cargo.toml  README.md
lib/rdf-writer-jelly/examples/: write_jelly.rs
lib/rdf-writer-jelly/src/: error.rs  lib.rs  writer.rs
lib/rdf-writer-nquads/: Cargo.toml  README.md
lib/rdf-writer-nquads/examples/: write_nquads.rs
lib/rdf-writer-nquads/src/: lib.rs
(+143 files in other folders)
