# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["bin/*", "lib/*"]
default-members = [
    "lib/rdf_rs",
    "lib/rdf-borsh",
    "lib/rdf-derive",
    "lib/rdf-format",
    "lib/rdf-model",
    "lib/rdf-query",
    "lib/rdf-reader",
    "lib/rdf-store",
    "lib/rdf-stream",
    "lib/rdf-vocab",
    "lib/rdf-writer",
    "lib/xsd",
]
resolver = "2"

[workspace.package]
version = "0.3.4"
authors = ["Arto Bendiken"]
edition = "2024"
rust-version = "1.85"
description = "RDF.rs is a Rust framework for working with RDF knowledge graphs."
#documentation = "https://docs.rs/rdf-model"
readme = true
homepage = "https://github.com/rust-rdf"
repository = "https://github.com/rust-rdf/rdf.rs"
license = "Unlicense"
keywords = ["rdf", "knowledge-graph", "linked-data", "semantic-web"]
categories = ["data-structures", "no-std"]
publish = true

[workspace.dependencies]
rdf = { package = "rdf_rs", version = "=0.3.4", default-features = true }
rdf-borsh = { version = "=0.3.4", default-features = true }
rdf-derive = { version = "=0.3.4", default-features = true }
rdf-format = { version = "=0.3.4", default-features = true }
rdf-model = { version = "=0.3.4", default-features = true }
rdf-query = { version = "=0.3.4", default-features = true }
rdf-reader = { version = "=0.3.4", default-features = true }
rdf-store = { version = "=0.3.4", default-features = true }
rdf-store-mongo = { version = "=0.3.4", default-features = true }
rdf-store-neo4j = { version = "=0.3.4", default-features = true }
rdf-store-oxigraph = { version = "=0.3.4", default-features = true }
rdf-store-postgres = { version = "=0.3.4", default-features = true }
rdf-store-qlever = { version = "=0.3.4", default-features = true }
rdf-store-sqlite = { version = "=0.3.4", default-features = true }
rdf-store-turso = { version = "=0.3.4", default-features = true }
rdf-store-valkey = { version = "=0.3.4", default-features = true }
rdf-store-virtuoso = { version = "=0.3.4", default-features = true }
rdf-stream = { version = "=0.3.4", default-features = true }
rdf-vocab = { version = "=0.3.4", default-features = true }
rdf-writer = { version = "=0.3.4", default-features = true }
xsd = { version = "=0.3.4", default-features = true }

# Integrations:
borsh = { version = "1.6", default-features = false, features = ["derive"] }
dogma = { version = "0.1", default-features = false, features = ["traits"] }
oxrdf = { version = "0.3", default-features = false }
oxrdfio = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sophia = { version = "0.10", default-features = false }

# Implementation:
arrayvec = { version = "0.7", default-features = false }
async-stream = "0.3"
async-trait = "0.1"
decorum = { version = "0.4", default-features = false }
derive_more = { version = "2", default-features = false }
float-ord = { version = "0.3", default-features = false }
futures = "0.3"
hex = { version = "0.4", default-features = false }
itertools = { version = "0.14", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }
parking_lot = { version = "0.12", default-features = false }
serde_json = { version = "1", default-features = false, features = ["preserve_order"] }
tempfile = { version = "3.15", default-features = false }
thiserror = { version = "2", default-features = false }

# Development:
aquamarine = { version = "0.6", default-features = false }
instability = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[patch.crates-io]
rdf-cli = { path = "bin/rdf" }
rdf_rs = { path = "lib/rdf_rs" }
rdf-borsh = { path = "lib/rdf-borsh" }
rdf-derive = { path = "lib/rdf-derive" }
rdf-format = { path = "lib/rdf-format" }
rdf-model = { path = "lib/rdf-model" }
rdf-query = { path = "lib/rdf-query" }
rdf-reader = { path = "lib/rdf-reader" }
rdf-store = { path = "lib/rdf-store" }
rdf-store-mongo = { path = "lib/rdf-store-mongo" }
rdf-store-neo4j = { path = "lib/rdf-store-neo4j" }
rdf-store-oxigraph = { path = "lib/rdf-store-oxigraph" }
rdf-store-postgres = { path = "lib/rdf-store-postgres" }
rdf-store-qlever = { path = "lib/rdf-store-qlever" }
rdf-store-sqlite = { path = "lib/rdf-store-sqlite" }
rdf-store-turso = { path = "lib/rdf-store-turso" }
rdf-store-valkey = { path = "lib/rdf-store-valkey" }
rdf-store-virtuoso = { path = "lib/rdf-store-virtuoso" }
rdf-stream = { path = "lib/rdf-stream" }
rdf-vocab = { path = "lib/rdf-vocab" }
rdf-writer = { path = "lib/rdf-writer" }
xsd = { path = "lib/xsd" }
