[package]
name = "rdf-borsh"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
std = ["borsh/std", "rdf-model/std", "rdf-reader/std", "rdf-writer/std"]
unstable = ["rdf-model/unstable", "rdf-reader/unstable", "rdf-writer/unstable"]

[dependencies]
borsh = { version = "1.5", default-features = false }
rdf-model.workspace = true
rdf-reader.workspace = true
rdf-writer.workspace = true
