[package]
name = "rdf-borsh"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
std = ["borsh/std", "rdf-model/std", "rdf-reader/std", "rdf-writer/std", "winnow/std"]
unstable = ["rdf-model/unstable", "rdf-reader/unstable", "rdf-writer/unstable"]

[dependencies]
borsh = { version = "1.5", default-features = false, features = ["derive"] }
lz4_flex = { version = "0.11", default-features = true }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }
rdf-model = { workspace = true, features = ["borsh"] }
rdf-reader.workspace = true
rdf-writer.workspace = true
winnow = { version = "0.6.24", default-features = false, features = ["simd"] }

[dev-dependencies]
tempfile = { version = "3.15.0", default-features = false }
