[package]
name = "rdf-borsh"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = [
    "rdf-model/alloc",
    "rdf-reader/alloc",
    "rdf-writer/alloc",
]
std = [
    "alloc",
    "borsh/std",
    "rdf-model/std",
    "rdf-reader/std",
    "rdf-writer/std",
    "winnow/std",
]
unstable = []

[dependencies]
borsh.workspace = true
lz4_flex = { version = "0.11", default-features = true }
num-traits.workspace = true
num-integer.workspace = true
rdf-model = { workspace = true, features = ["borsh"] }
rdf-reader.workspace = true
rdf-writer.workspace = true
winnow = { version = "1.0", default-features = false, features = ["simd"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
