[package]
name = "rdf-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["rdf", "derive", "macro"]
categories = ["development-tools::procedural-macro-helpers"]
publish.workspace = true

[lib]
proc-macro = true

[features]
default = ["all", "std"]
all = []
std = ["rdf-model/std"]
unstable = ["rdf-model/unstable"]

[dependencies]
proc-macro2 = { version = "1", default-features = false }
proc-macro-crate = "3.1"
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = true }

[dev-dependencies]
rdf-model = { version = "=0.0.0", default-features = false }
