[package]
name = "rdf-format"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde"]
serde = ["rdf-model/serde", "dep:serde"]
std = ["rdf-model/std", "serde?/std"]
unstable = ["rdf-model/unstable"]

[dependencies]
rdf-model = { version = "=0.0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
