[package]
name = "rdf-format"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde"]
oxrdf = ["rdf-model/oxrdf", "dep:oxrdfio"]
serde = ["rdf-model/serde", "dep:serde"]
sophia = ["rdf-model/sophia", "dep:sophia"]
std = ["dogma/std", "rdf-model/std", "serde?/std"]
unstable = ["rdf-model/unstable"]

[dependencies]
dogma.workspace = true
oxrdfio = { version = "0.1", default-features = false, optional = true }
rdf-model.workspace = true
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }
sophia = { version = "0.9", default-features = false, optional = true }
