[package]
name = "rdf-format"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["rdf-star", "serde"]
alloc = ["rdf-model/alloc"]
std = ["alloc", "dogma/std", "rdf-model/std", "serde?/std"]
unstable = []

# Features:
rdf-star = ["oxrdfio?/rdf-star", "rdf-model/rdf-star"]

# Integrations:
oxrdf = ["rdf-model/oxrdf", "dep:oxrdfio"]
serde = ["rdf-model/serde", "dep:serde"]
sophia = ["rdf-model/sophia", "dep:sophia"]

[dependencies]
dogma.workspace = true
rdf-model.workspace = true

# Integrations:
oxrdfio = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sophia = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
