[package]
name = "rdf-hash"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["blake3"]
alloc = ["rdf-model/alloc"]
std = ["alloc", "blake3?/std", "rdf-model/std"]
unstable = []

# Integrations:
blake3 = ["dep:blake3"]
serde = ["dep:serde", "dep:serde_json", "blake3/serde"]
zeroize = ["dep:zeroize", "blake3/zeroize"]

[dependencies]
heapless.workspace = true
rdf-model.workspace = true

# Integrations:
blake3 = { version = "1.8", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
