[package]
name = "rdf-model"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["hash", "rdf-star", "serde", "oxrdf"]
alloc = ["serde_json?/alloc", "xsd/alloc"]
std = ["alloc", "dogma/std", "serde?/std", "serde_json?/std", "xsd/std"]
unstable = []

# Features:
hash = ["blake3"]
rdf-star = ["oxrdf?/rdf-12"]

# Integrations:
blake3 = ["dep:blake3"]
borsh = ["dep:borsh", "xsd/borsh"]
bson = ["dep:bson", "xsd/bson"]
oxrdf = ["dep:oxrdf"]
serde = ["dep:serde", "dep:serde_json", "xsd/serde"]
sophia = ["dep:sophia"]

[dependencies]
dogma.workspace = true
instability.workspace = true
xsd = { workspace = true, features = ["datetime", "decimal"] }

# Integrations:
blake3 = { version = "1.8", optional = true }
borsh = { workspace = true, optional = true }
bson = { workspace = true, optional = true }
oxrdf = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sophia = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
