[package]
name = "rdf-model"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = ["serde", "oxrdf"]
alloc = ["known-languages/alloc", "serde_json?/alloc", "xsd/alloc"]
std = ["alloc", "dogma/std", "known-languages/std", "serde?/std", "serde_json?/std", "xsd/std"]
unstable = []

# Interoperability:
borsh = ["dep:borsh", "xsd/borsh"]
bson = ["dep:bson", "xsd/bson"]
datafusion = ["dep:rdf-fusion", "xsd/datafusion"]
json-ld = ["dep:json-ld", "xsd/json-ld"]
oxrdf = ["dep:oxrdf", "xsd/oxrdf"]
rudof = ["dep:rudof", "xsd/rudof"]
serde = ["dep:serde", "dep:serde_json", "xsd/serde"]
sophia = ["dep:sophia", "xsd/sophia"]

[dependencies]
dogma.workspace = true
known-languages.workspace = true
xsd = { workspace = true, features = ["datetime", "decimal"] }

# Interoperability:
borsh = { workspace = true, optional = true }
bson = { workspace = true, optional = true }
json-ld = { workspace = true, optional = true }
oxrdf = { workspace = true, optional = true }
rdf-fusion = { workspace = true, optional = true }
rudof = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sophia = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
