[package]
name = "rdf-reader-cottas"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A COTTAS file reader for RDF.rs knowledge graphs."
#documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.lvr]
label = "COTTAS"
summary = "A COTTAS file reader for [RDF.rs] knowledge graphs."
features = []

[package.metadata.lvr.examples]
import = "rdf_reader_cottas::CottasReader"

[features]
default = ["all", "std"]
all = []
alloc = ["rdf-format/alloc", "rdf-model/alloc", "rdf-reader/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std", "rdf-reader/std"]
unstable = []

[dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
async-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
parquet = { workspace = true, features = ["arrow", "zstd"] }
rdf-format.workspace = true
rdf-model.workspace = true
rdf-reader.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }
