[package]
name = "rdf-reader-jelly"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A Jelly file reader for RDF.rs knowledge graphs."
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
all = []
alloc = ["rdf-format/alloc", "rdf-model/alloc", "rdf-reader/alloc"]
std = ["alloc", "rdf-format/std", "rdf-model/std", "rdf-reader/std"]
unstable = []

[dependencies]
async-stream.workspace = true
futures.workspace = true
prost = { version = "0.14", default-features = false }
prost-types = { version = "0.14", default-features = false }
rdf-format.workspace = true
rdf-model.workspace = true
rdf-reader.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }

[build-dependencies]
prost-build = "0.14"
